--- a/src/app/pages/transaction/transaction-index/transaction-index.page.html
+++ b/src/app/pages/transaction/transaction-index/transaction-index.page.html
@@ -8,9 +8,141 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Transactions</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <div *ngIf="!isLoading" [ngSwitch]="currentUser.roles">
+
+    <div *ngSwitchCase="'admin'">
+
+      <ion-item-divider>
+        <ion-label>Withdrawal Request</ion-label>
+      </ion-item-divider>
+
+      <ion-card *ngIf="loadedSettlement.length === 0" color="danger">
+        <ion-card-content>You have no withdrawal requests yet.</ion-card-content>
+      </ion-card>
+
+      <ion-item *ngFor="let item of loadedSettlement" [routerLink]="'process/' + item.id.toString()">
+        <ion-grid fixed>
+          <ion-row class="ion-align-items-center" style="margin: 8px 0;">
+            <ion-col size="auto">
+              <ion-avatar class="ion-margin-end">
+                <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+              </ion-avatar>
+            </ion-col>
+            <ion-col>
+              <ion-text style="font-weight: bold; font-size: x-large;">{{ item.amount | currency: "RM" }}</ion-text>
+              <br>
+              <ion-text style="font-weight: bold;">{{ item.user_name }}</ion-text>
+              <br>
+              <ion-text color="medium" style="font-size: small;">{{ item.created_at }}</ion-text>
+            </ion-col>
+            <ion-col size="auto">
+              <ion-badge [color]="item.status === 0 ? 'medium' : 'success'">{{ item.status === 0 ? 'Pending' : 'Approved' }}</ion-badge>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+    </div>
+
+    <div *ngSwitchCase="'canteen-worker'">
+      <ion-card color="primary">
+        <ion-card-header color="dark">
+          <ion-grid fixed>
+            <ion-row>
+              <ion-col style="font-size: x-large; font-weight: bold;">Total Income</ion-col>
+              <ion-col style="font-size: x-large;" size="auto">{{ month }}</ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-card-header>
+        <ion-card-content>
+          <br>
+          <ion-text style="font-size: xx-large; font-weight: bold;">{{ totalTransaction > 0 ? '+' : '' }} {{ totalTransaction | currency: 'RM' }}</ion-text>
+        </ion-card-content>
+      </ion-card>
+
+      <ion-button class="ion-margin-start ion-margin-end" color="success" expand="block" routerLink="withdraw">Withdraw</ion-button>
+
+      <ion-card *ngIf="loadedSettlement.length === 0" color="danger">
+        <ion-card-content>You have no settlement requests yet.</ion-card-content>
+      </ion-card>
+
+      <div *ngIf="loadedSettlement.length > 0">
+        <ion-card color="pink" *ngFor="let item of loadedSettlement">
+          <ion-card-content>
+            <ion-grid fixed>
+              <ion-row>
+                <ion-col class="ion-text-start">
+                  <ion-text style="font-size: larger;">Amount</ion-text>
+                  <br>
+                  <ion-text style="font-size: x-large; font-weight: bold;">{{ item.amount | currency: "RM" }}</ion-text>
+                  <br>
+                  <ion-text style="font-size: small;">{{ item.created_at }}</ion-text>
+                </ion-col>
+                <ion-col size="auto">
+                  <ion-badge [color]="item.status === 0 ? 'medium' : 'success'">{{ item.status === 0 ? 'Pending' : 'Successful' }}</ion-badge>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card-content>
+        </ion-card>
+      </div>
+    </div>
+
+    <div *ngSwitchCase="'parent'">
+      <ion-card [color]="totalTransaction > 0 ? 'danger' : 'primary'">
+        <ion-card-header color="dark">
+          <ion-grid fixed>
+            <ion-row>
+              <ion-col style="font-size: x-large; font-weight: bold;">Total Spent</ion-col>
+              <ion-col style="font-size: x-large;" size="auto">{{ month }}</ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-card-header>
+        <ion-card-content>
+          <br>
+          <ion-text style="font-size: xx-large; font-weight: bold;">{{ totalTransaction > 0 ? '-' : '' }} {{ totalTransaction | currency: 'RM' }}</ion-text>
+        </ion-card-content>
+      </ion-card>
+
+      <ion-card *ngIf="loadedTransaction.length === 0" color="danger">
+        <ion-card-content>You have no transactions yet this month.</ion-card-content>
+      </ion-card>
+
+      <div *ngIf="loadedTransaction.length > 0">
+        <br>
+        <ion-item-divider>
+          <ion-label>History</ion-label>
+        </ion-item-divider>
+        <ion-item *ngFor="let item of loadedTransaction">
+          <ion-grid fixed>
+            <ion-row style="margin: 8px 0;">
+              <ion-col size="auto">
+                <ion-avatar class="ion-margin-end">
+                  <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+                </ion-avatar>
+              </ion-col>
+              <ion-col>
+                <ion-text>{{ item.student_name }}</ion-text>
+                <br>
+                <ion-text color="medium" style="font-size: small; font-weight: bold;">{{ item.created_at }}</ion-text>
+              </ion-col>
+              <ion-col size="auto" class="ion-text-end">
+                <ion-text>{{ item.menu_name }} x {{ item.quantity }}</ion-text>
+                <br>
+                <ion-text color="danger" style="font-weight: bold;">{{ item.amount_paid | currency: "RM" }}</ion-text>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-item>
+      </div>
+    </div>
+
+  </div>
+
 </ion-content>
