Update app icon and styling

--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -37,7 +37,7 @@
 
           <ion-row class="register-row ion-justify-content-between">
             <ion-text (click)="openRegisterPage()">Sign Up</ion-text>
-            <ion-text (click)="openResetPage()">Forgot Password</ion-text>
+            <!-- <ion-text (click)="openResetPage()">Forgot Password</ion-text> -->
           </ion-row>
 
         </form>
