--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -1,6 +1,6 @@
 .header {
   margin: 16px;
-  margin-top: 5vh;
+  margin-top: 15vh;
 }
 
 .app-icon {
@@ -32,7 +32,5 @@
 }
 
 .gradient {
-  --background: linear-gradient(180deg, #F771FB 0%, #FC98E2 50%, #FFF9FC 100%);
-  height: 100%;
-  width: 100%;
+  --background: linear-gradient(180deg, #f771fb 0%, #fc98e2 50%, #fff9fc 100%);
 }
